--- a/Pedal_Robots/alarmdata.ui
+++ b/Pedal_Robots/alarmdata.ui
@@ -28,6 +28,16 @@
      <pointsize>16</pointsize>
     </font>
    </property>
+   <property name="dateTime">
+    <datetime>
+     <hour>0</hour>
+     <minute>0</minute>
+     <second>0</second>
+     <year>2024</year>
+     <month>6</month>
+     <day>12</day>
+    </datetime>
+   </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
@@ -51,7 +61,7 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>450</x>
+     <x>490</x>
      <y>20</y>
      <width>131</width>
      <height>31</height>
